--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "feather-icons": "^4.17.0",
     "firebase": "^5.3.0",
     "vee-validate": "^2.1.0-beta.6",
     "vue": "^2.5.2",
+    "vue-feather-icon": "^1.2.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.1.7",
     "vuex": "^3.0.1"
